--- a/cv/src/index.html
+++ b/cv/src/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <title>Cv</title>
-    <base href="/cv/" /> 
+    <base href="" /> 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="./assets/img/logo.png" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
