--- a/cv/src/index.html
+++ b/cv/src/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <title>Cv</title>
-    <base href="" /> 
+    <base href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="./assets/img/logo.png" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
